<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Search / will display always -->
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_add_contact"
        android:icon="@drawable/ic_add_contact_holo_dark"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_add_contact"/>
    <item
        android:id="@+id/action_send_pk"
        android:orderInCategory="102"
        android:title="@string/action_send_pk"/>
    <item
        android:id="@+id/action_copy_pk"
        android:orderInCategory="103"
        android:title="@string/action_copy_pk"/>

</menu>