<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/conversationPicture"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/conversation_summary_picture"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:src="@drawable/neide" />

    <TextView
        android:id="@+id/conversationParty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/conversationPicture"
        android:divider="@null"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/dummy_text"
        android:textSize="16sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/conversationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:divider="@null"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:text="@string/dummy_date"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/conversationSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conversationParty"
        android:layout_toRightOf="@+id/conversationPicture"
        android:lines="1"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="35dp"
        android:paddingTop="5dp"
        android:textSize="15sp"
        android:text="@string/string_dummy_conversation_text" >
    </TextView>

    <ImageView
        android:id="@+id/conversationUnread"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignBottom="@+id/conversationSummary"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/conversationDate"
        android:contentDescription="@string/conversation_summary_picture"
        android:paddingRight="5dp"
        android:src="@drawable/ic_action_unread" />

</RelativeLayout>