<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sneer.android.main.ui.ContactActivity" >

    <RelativeLayout
        android:id="@+id/nameRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/selfie"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="#afafaf"
            android:clickable="true"
            android:contentDescription="@string/profile_view_content_description"
            android:onClick="selfieOnClick"
            android:src="@drawable/avatar" />

        <TextView
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/selfie"
            android:hint="@string/profile_view_first_name" >
        </TextView>

        <TextView
            android:id="@+id/preferredNickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/selfie"
            android:hint="@string/profile_view_first_name" >
        </TextView>

        <EditText
            android:id="@+id/nickNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/preferredNickName"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/selfie"
            android:hint="@string/profile_view_preferred_nickname"
            android:inputType="textPersonName"
            android:paddingLeft="10dp" >
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/optionalRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameRelativeLayout"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:hint="@string/profile_view_city"
            android:paddingLeft="10dp" >
        </TextView>
        
        <TextView
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/city"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:hint="@string/profile_view_country"
            android:paddingLeft="10dp" >
        </TextView>
        
        
    </RelativeLayout>

</RelativeLayout>